opam-version: "2.0"
name: "lz4"
version: "1.1.1"
maintainer: "whitequark <whitequark@whitequark.org>"
authors: [ "whitequark <whitequark@whitequark.org>" ]
license: "BSD-3-clause"
homepage: "https://github.com/whitequark/ocaml-lz4"
doc: "http://whitequark.github.io/ocaml-lz4"
bug-reports: "https://github.com/whitequark/ocaml-lz4/issues"
dev-repo: "git://github.com/whitequark/ocaml-lz4.git"
tags: [ "syntax" ]
build: [
  ["dune" "build" "@install" "-j" jobs "-p" name]
  ["dune" "runtest" "-j" jobs "-p" name] {with-test}
  ["dune" "build" "@doc" "-j" jobs "-p" name] {with-doc}
]
depends: [
  "base-bytes"
  "ocamlfind"
  "dune"
  "ctypes" {>= "0.4.1"}
  "ounit2" {test}
]
depexts: [
  [["debian"] ["liblz4-dev"]]
  [["ubuntu"] ["liblz4-dev"]]
]
